5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1664_1391.log
== TEST (2019-04-16 10:13:48) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( valor * 0.60 + 5.00 ))
alta = float(input(valor * 0.75 + 16.00))
if(valor <= 150)
	print(round(baixa, 2))
-- ERROR:
File "XXXX", line 4
    if(valor <= 150)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:20) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( valor * 0.60 + 5.00 ))
alta = float(input(valor * 0.75 + 16.00))
if(valor =< 150)
	print(round(baixa, 2))
-- ERROR:
File "XXXX", line 4
    if(valor =< 150)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:34) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( valor * 0.60 + 5.00 ))
alta = float(input(valor * 0.75 + 16.00))
if(valor <= 150):
	print(round(baixa, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    baixa = float(input( valor * 0.60 + 5.00 ))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:15:26) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( valor * 0.60 + 5.00 ))
alta = float(input(valor * 0.75 + 16.00))
if(valor <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    baixa = float(input( valor * 0.60 + 5.00 ))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:14) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( valor * 0.60) + 5.00 )
alta = float(input(valor * 0.75) + 16.00)
if(valor <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    baixa = float(input( valor * 0.60) + 5.00 )
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:18:19) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( valor * 0.60) + 5.00 )
alta = float(input(valor * 0.75) + 16.00)
if(valor <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- EXECUTION TIME:
0.121255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/1391/main.py", line 2, in <module>
    baixa = float(input( valor * 0.60) + 5.00 )
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:59) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( valor * 0.60) + 5.00 )
alta = float(input(valor * 0.75) + 16.00)
if(valor <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    baixa = float(input( valor * 0.60) + 5.00 )
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:06) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( 0.60 * valor  + 5.00 ))
alta = float(input (0.75 * valor  + 16.00))
if(valor <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    baixa = float(input( 0.60 * valor  + 5.00 ))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:46:12) 
-- CODE:
valor = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( 0.60 * k + 5.00 ))
alta = float(input( 0.75 * k + 16.00))
if(valor <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    baixa = float(input( 0.60 * k + 5.00 ))
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:46:29) 
-- CODE:
k = float(input("qual a quantidade de enegia utilizada: "))
baixa = float(input( 0.60 * k + 5.00 ))
alta = float(input( 0.75 * k + 16.00))
if(valor <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    baixa = float(input( 0.60 * k + 5.00 ))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:23) 
-- CODE:
k = float(input("qual a quantidade de enegia utilizada: "))
baixa = float( 0.60 * k + 5.00 )
alta = float( 0.75 * k + 16.00)
if(valor <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(valor <= 150):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:45) 
-- CODE:
k = float(input("qual a quantidade de enegia utilizada: "))
baixa = float( 0.60 * k + 5.00 )
alta = float( 0.75 * k + 16.00)
if(k <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:48:51) 
-- CODE:
k = float(input("qual a quantidade de enegia utilizada: "))
baixa = float( 0.60 * k + 5.00 )
alta = float( 0.75 * k + 16.00)
if(k <= 150):
	print(round(baixa, 2))
else:
	print(round(alta, 2))
-- EXECUTION TIME:
0.175983
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
90.2
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
